--- a/app/views/ideas/edit.html.erb
+++ b/app/views/ideas/edit.html.erb
@@ -1,6 +1,8 @@
+<div class="container">
 <h1>Editing idea</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @idea %> |
-<%= link_to 'Back', ideas_path %>
+
+
+</div>
