--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,29 +1,32 @@
-<h1>Listing ideas</h1>
+<div class="post-hero">
+	<h1>Listing ideas</h1>
+</div>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Picture</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="container text-center hero-title">
+	<h2>Keep calm and carry on.</h2>
+	<div class="col-md-6 col-md-offset-3">
+		<hr/>
+	</div>
+</div>
 
-  <tbody>
-    <% @ideas.each do |idea| %>
-      <tr>
-        <td><%= idea.name %></td>
-        <td><%= idea.description %></td>
-        <td><%= idea.picture %></td>
-        <td><%= link_to 'Show', idea,class:"btn btn-default" %></td>
-        <td><%= link_to 'Edit', edit_idea_path(idea) %></td>
-        <td><%= link_to 'Destroy', idea, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="container text-center">
+	<% @ideas.in_groups_of(3) do |group| %>
+	<div class="row">
+		<% group.compact.each do |idea| %>
+		<div class="col-md-4 gallery-item">
+			<div class="hero-item">
+				<div class="thumb">
+					<%= image_tag idea.picture_url if idea.picture? %>
+				</div>
+				<div class="description">
+					<h4><%= link_to idea.name, idea %></h4>
+					<%= idea.description %>
+				</div>
+			</div>
+		</div>
+		<% end %>
+		
 
-<br>
-
-<%= link_to 'New Idea', new_idea_path %>
+	</div>
+	<% end %>
+</div>
