--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -1,19 +1,29 @@
+<div class="container">
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @idea.name %>
-</p>
+<div class="row">
+  <div class="col-md-9">
+    <%= image_tag(@idea.picture_url, :width => "100%") if @idea.picture.present? %>
+    
+  </div>
 
-<p>
-  <strong>Description:</strong>
-  <%= @idea.description %>
-</p>
-
-<p>
-  <strong>Picture:</strong>
-  <%= image_tag(@idea.picture_url, width: 600) if @idea.picture.present? %>
-</p>
-
-<%= link_to 'Edit', edit_idea_path(@idea) %> |
-<%= link_to 'Back', ideas_path %>
+  <div class="col-md-3">
+    <p><b>Name: </b><%= @idea.name %></p>
+    <p><b>Description: </b><%= @idea.description %></p>
+    <p>
+      <%= link_to 'Edit', edit_idea_path(@idea), class:'btn btn-default' %> 
+      <%= link_to 'Destroy', @idea, confirm: 'Are you sure?', method: :delete ,class:'btn btn-danger'%> 
+      <%= link_to 'Back', ideas_path,class:'btn btn-primary' %>
+    <h3>Comments</h3>
+<% @comments.each do |comment| %>
+  <div>
+    <strong><%= comment.user_name %></strong>
+    <br />
+    <p><%= comment.body %></p>
+  </div>
+<% end %>
+<%= render 'comments/form' %>
+    </p>
+  </div>
+</div>
+</div>
